--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
 <link href="https://cdnjs.cloudflare.com" rel="preconnect"/>
-<title>TOOL QUAYHU 2026</title>
+<title>TOOL HACK HŨ MỚI NHẤT</title>
 <!-- Google Fonts removed to improve performance -->
 <!-- Tailwind runtime (Play CDN) - KEEP as fallback during development -->
 <!-- Tailwind CSS CDN -->
