--- a/index.html
+++ b/index.html
@@ -2485,7 +2485,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 }
             },
             ai_cores: [
-                { id: 'longbao_iv', name: 'Long Bao Thế Hệ V', description: 'SIÊU A.I PHÂN TÍCH THẾ HỆ V ', gif: 'https://giphy.com/embed/RYgfhSgSczq3kvaJ1U' },
+                { id: 'longbao_iv', name: 'TOOL BCR ĐỒ THỊ', description: 'SIÊU A.I PHÂN TÍCH THẾ HỆ V ', gif: 'https://giphy.com/embed/RYgfhSgSczq3kvaJ1U' },
                 { id: 'soi_hu', name: 'TOOL SĂN HỦ', description: 'Công nghệ SĂN HỦ giúp người chơi big win 1 cách dễ dàng.', gif: 'https://giphy.com/embed/mGLbTcuJXDdNhuymPs' },
                 { id: 'yian', name: 'Yian Soi Lá Bài', description: 'Công nghệ tương lai độc quyền - Giờ đây soi lá bài không phải là tưởng tượng nữa!', gif: 'https://giphy.com/embed/hi9Jsq05bluzriledc', externalUrl: 'yian_core.html' },
                 { id: 'aquarius', name: 'Siêu Lõi Aquarius', description: 'Được tạo lên từ A.I thông minh nhất thế giới Grok IV - Tỉ lệ thắng 99%. X1000 lần tài khoản trong 1 đêm không còn là mơ.', gif: 'https://giphy.com/embed/Jfu7aUAHd1C8XNuCSl', externalUrl: 'https://www.aquariusvip.site' },
